- Criado arquivo strings.xml de localização pt, BR.
- Todas as strings do aplicativo agora estão referenciadas no arquivo strings.xml.
- Implementada a função de remoção de piadas favoritadas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_favorite_joke">Favorite Jokes List</string>
+    <string name="joke">Joke</string>
+    <string name="moved_favorites">Moved to Favorites</string>
+    <string name="success_delete">Successfully deleted</string>
+    <string name="wish_favorite">Wish to move this joke to favorites?</string>
+    <string name="wish_delete">Wish to remove this joke from favorites?</string>
 </resources>
