- Adicionado ícone personalizado para o app.
- Arquivo themes.xml implementado, tanto no modo noturno quanto no normal.
- Criado o arquivo attrs.xml para lidar com os temas.
- Cores adicionadas no arquivo colors.xml para trabalhar com os temas.
- Substituição de Toast por SnackBar.
- Layout das View's rebuscados e padronizados.
- Adição de strings no arquivo strings.xml (em pt e en).
- Corrigido o bug onde a activity_favorite_jokes não abria (Foi adicionado o Migrations no JokeDataBase.kt).
- Implementada mensagem de "lista vazia" na activity_favorite_jokes quando não há piadas armazenadas no banco de dados.

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RandomJoke</string>
+    <string name="app_name">Random Joke</string>
     <string name="category_all">Todas as Piadas</string>
     <string name="category_programming">Piadas de Programação</string>
     <string name="category_favorite">Piadas Favoritadas</string>
@@ -14,4 +14,5 @@
     <string name="success_delete">Deletado com Sucesso</string>
     <string name="wish_favorite">Deseja adicionar a piada aos favoritos?</string>
     <string name="wish_delete">Deseja deletar a piada dos favoritos?</string>
+    <string name="empty_list">Lista Vazia \n É necessário adicionar uma piada aos favoritos</string>
 </resources>
